# 9c-k8s-config

./: .gitignore  README.md  deploy-mainnet.sh  deployment.yaml  explorer-deployment.yaml  reset_snapshot.sh  service.yaml  shell.yaml  statefulset-standalone.yaml  statefulset.yaml
py-scripts/: .env.sample  .gitignore  CONTRIBUTING.md  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
py-scripts/scripts/: format.sh  lint.sh
py-scripts/tests/: test_apv.py  test_config.py  test_github.py  test_github_commit_url.py  test_notion.py
py-scripts/tests/client/: conftest.py  test_docker.py  test_github.py  test_slack.py
py-scripts/tests/github/: test_parser.py
py-scripts/tests/k8s/: test_manifest.py  test_update.py
py-scripts/tests/planet/: test_apv.py  test_generator.py  test_planet.py
py-scripts/tests/utils/: test_parse.py  test_url.py
py-scripts/toolbelt/: config.py  constants.py  exceptions.py  types.py
py-scripts/toolbelt/check/: __init__.py  image.py
py-scripts/toolbelt/client/: __init__.py  aws.py  docker.py  github.py  notion.py  session.py  slack.py
py-scripts/toolbelt/github/: __init__.py  commit.py  old_github.py  parser.py  release_9c_repos.py
py-scripts/toolbelt/k8s/: __init__.py  apv.py  manifest.py  update.py
py-scripts/toolbelt/k8s_update/: __init__.py  update.py  update_internal_yamls.py  update_k8s_yaml.py
py-scripts/toolbelt/planet/: __init__.py  apv.py  planet.py
py-scripts/toolbelt/prepare/: __init__.py  artifacts.py  copy_machine.py  manifest.py  prepare.py  prepare_internal_test.py  prepare_main_deploy.py  repos.py  (+1 more)
(+239 files in other folders)
