[build-system]
requires = ["flit_core>=3,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{ name = "Planetarium", email = "engineering@planetariumhq.com" }]
name = "toolbelt"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "py7zr ~=0.20.0",
    "structlog >=16.1,<22.1",
    "boto3 ~=1.24",
    "PyYAML ==6.0",
    "requests ==2.26.0",
    "kubernetes ~=24.2",
    "typer[all] ~=0.6.1",
    "python-dotenv ~=0.19",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest >=7.0,<7.2",
    "pytest-cov >=2.10.0,<3.0.0",
    "requests-mock~=1.10.0",
]
type = ["mypy ==0.971", "types-requests"]
dev = [
    "pre-commit >=2.17.0,<3.0.0",
    "colorama >=0.4.3,<0.5.0",
    "black ~=22.6.0",
    "flake8 ~=4.0.0",
]

[tool.flit.sdist]
include = ["toolbelt/*"]
exclude = [".env.sample", ".vscode/*", "tests/*"]

[tool.flit.module]
name = "toolbelt"

[tool.black]
addopts = "--line-length = 79"

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under 80"

[tool.mypy]
show_column_numbers = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
